--- a/index.html
+++ b/index.html
@@ -174,22 +174,18 @@
     <script>
         const skillsData = [
             { name: 'System Administration', category: 'technical' },
+            { name: 'Apache Guacamole', category: 'technical' },
+            { name: 'Keycloak SSO', category: 'technical' },
+            { name: 'FreePBX', category: 'technical' },
             { name: 'Network Administration', category: 'technical' },
             { name: 'IT Infrastructure', category: 'technical' },
             { name: 'IT Support', category: 'technical' },
             { name: 'Firewall Management', category: 'technical' },
             { name: 'VPN Implementation', category: 'technical' },
             { name: 'IT Consulting', category: 'technical' },
-            { name: 'Cloud Services', category: 'technical' },
-            { name: 'POS Systems', category: 'technical' },
-            { name: 'IP Phones', category: 'technical' },
-            { name: 'ERP Server Management', category: 'technical' },
             { name: 'CCTV Management', category: 'technical' },
             { name: 'Backup Solutions (Veeam)', category: 'technical' },
             { name: 'IT Monitoring (Nagios, PRTG, Zabbix)', category: 'technical' },
-            { name: 'Microsoft Entra ID', category: 'technical' },
-            { name: 'Microsoft Exchange', category: 'technical' },
-            { name: 'SSO/SAML/IdP Configs', category: 'technical' },
             { name: 'PowerShell', category: 'scripting' },
             { name: 'Bash', category: 'scripting' },
             { name: 'Python', category: 'scripting' },
