--- a/index.html
+++ b/index.html
@@ -186,24 +186,28 @@
             { name: 'CCTV Management', category: 'technical' },
             { name: 'Backup Solutions (Veeam)', category: 'technical' },
             { name: 'IT Monitoring (Nagios, PRTG, Zabbix)', category: 'technical' },
-            { name: 'PowerShell', category: 'scripting' },
-            { name: 'Bash', category: 'scripting' },
-            { name: 'Python', category: 'scripting' },
+            { name: 'PowerShell', category: 'AI & Automations' },
+            { name: 'Bash', category: 'AI & Automations' },
+            { name: 'Python', category: 'AI & Automations' },
             { name: 'VMware & vSphere', category: 'virtualization' },
             { name: 'Hyper-V', category: 'virtualization' },
             { name: 'Proxmox & VirtualBox', category: 'virtualization' },
             { name: 'AWS', category: 'cloud' },
             { name: 'Google Cloud Platform', category: 'cloud' },
             { name: 'Microsoft Azure', category: 'cloud' },
+            { name: 'n8n', category: 'AI & Automations' },
+            { name: 'Olama', category: 'AI & Automations' },
         ];
 
         const experienceData = [
             {
                 role: 'System Administrator',
-                company: 'TWC Intl',
+                company: 'Oxiliry',
                 period: 'Apr 2025 - Present',
                 details: [
                     'Configure and maintain systems, firewalls, and monitoring tools alongside RMM platforms.',
+                    'Deployed self hosted custom AI models alongside self hosted n8n to automate day to day tasks.',
+                    'Innovate Smart DVR/NVR Troubleshooting Method.',
                     'Provide essential day-to-day IT support, ensuring smooth and uninterrupted operations.',
                     'Actively collaborate on the execution of upcoming IT infrastructure projects.'
                 ]
