--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="flex justify-center flex-wrap gap-2 mb-8 px-4">
                 <button onclick="filterSkills('all')" class="skill-filter-btn bg-sky-500 text-white py-2 px-4 rounded-full font-semibold">All</button>
                 <button onclick="filterSkills('technical')" class="skill-filter-btn bg-white text-slate-700 py-2 px-4 rounded-full font-semibold border border-slate-200">Technical Expertise</button>
-                <button onclick="filterSkills('scripting')" class="skill-filter-btn bg-white text-slate-700 py-2 px-4 rounded-full font-semibold border border-slate-200">Scripting & Automation</button>
+                <button onclick="filterSkills('scripting')" class="skill-filter-btn bg-white text-slate-700 py-2 px-4 rounded-full font-semibold border border-slate-200">AI, Scripting & Automation</button>
                 <button onclick="filterSkills('virtualization')" class="skill-filter-btn bg-white text-slate-700 py-2 px-4 rounded-full font-semibold border border-slate-200">Virtualization & Servers</button>
                 <button onclick="filterSkills('cloud')" class="skill-filter-btn bg-white text-slate-700 py-2 px-4 rounded-full font-semibold border border-slate-200">Cloud Platforms</button>
             </div>
@@ -186,17 +186,17 @@
             { name: 'CCTV Management', category: 'technical' },
             { name: 'Backup Solutions (Veeam)', category: 'technical' },
             { name: 'IT Monitoring (Nagios, PRTG, Zabbix)', category: 'technical' },
-            { name: 'PowerShell', category: 'AI & Automations' },
-            { name: 'Bash', category: 'AI & Automations' },
-            { name: 'Python', category: 'AI & Automations' },
+            { name: 'PowerShell', category: 'scripting' },
+            { name: 'Bash', category: 'scripting' },
+            { name: 'Python', category: 'scripting' },
             { name: 'VMware & vSphere', category: 'virtualization' },
             { name: 'Hyper-V', category: 'virtualization' },
             { name: 'Proxmox & VirtualBox', category: 'virtualization' },
             { name: 'AWS', category: 'cloud' },
             { name: 'Google Cloud Platform', category: 'cloud' },
             { name: 'Microsoft Azure', category: 'cloud' },
-            { name: 'n8n', category: 'AI & Automations' },
-            { name: 'Olama', category: 'AI & Automations' },
+            { name: 'n8n', category: 'scripting' },
+            { name: 'Olama', category: 'scripting' },
         ];
 
         const experienceData = [
