--- a/index.html
+++ b/index.html
@@ -7,15 +7,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
-    <!-- Chosen Palette: Slate Gray & Sky Blue -->
-    <!-- Application Structure Plan: The SPA is designed as a top-down narrative journey for a recruiter. It starts with a strong Hero section for immediate impact. This is followed by an 'About Me' to add personal context. The core of the application is the 'Interactive Skills Dashboard' and 'Career Timeline'. The dashboard allows users to filter skills, making a large amount of information digestible and demonstrating technical breadth. The timeline visually represents career progression, with interactive toggles to reveal details without overwhelming the user. A 'Spotlight' section highlights key achievements (Hackathon) and qualifications, making them stand out. This structure guides the user from a high-level summary to detailed, explorable content, which is more engaging and user-friendly than a static document. -->
-    <!-- Visualization & Content Choices: 
-        - Professional Summary -> Inform -> Static Text Block -> N/A -> Provides immediate context.
-        - Core Skills -> Organize/Compare -> Interactive Filterable Grid & Bar Chart -> User clicks category buttons to filter skills; chart provides a visual summary -> This makes the dense skill list easy to navigate and visually compares skill set distribution -> Vanilla JS for filtering, Chart.js for the bar chart.
-        - Professional Experience -> Change -> Interactive Vertical Timeline -> User clicks on a job title to expand/collapse details -> Shows career progression clearly and keeps the UI clean by hiding details by default -> Vanilla JS for toggle interaction.
-        - Achievements/Education -> Inform -> Styled Cards -> N/A -> Gives prominence to key qualifications and accomplishments -> HTML/Tailwind CSS.
-    -->
-    <!-- CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -87,6 +78,13 @@
     <main class="container mx-auto px-6 py-12">
 
         <section id="hero" class="text-center py-16">
+            <div class="relative w-40 h-40 mx-auto mb-6">
+                <img 
+                    src="https://ui-avatars.com/api/?name=Hamza+Shahzad&background=38bdf8&color=fff&size=256" 
+                    alt="Hamza Shahzad" 
+                    class="rounded-full w-full h-full object-cover border-4 border-white shadow-xl"
+                >
+            </div>
             <h1 class="text-5xl md:text-6xl font-extrabold text-slate-900">Hamza Shahzad</h1>
             <p class="mt-4 text-xl text-slate-500">Google Certified IT Professional | System Administrator | Tech-Savvy</p>
             <div class="mt-8 flex justify-center space-x-4">
@@ -167,7 +165,7 @@
     </main>
 
     <footer class="bg-slate-800 text-white text-center py-8">
-        <p>&copy; 2025 Hamza Shahzad. All Rights Reserved.</p>
+        <p>&copy; 2026 Hamza Shahzad. All Rights Reserved.</p>
         <p class="text-slate-400 mt-2">Built to showcase skills and experience.</p>
     </footer>
 
