--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <section id="hero" class="text-center py-16">
             <div class="relative w-40 h-40 mx-auto mb-6">
                 <img 
-                    src="https://ui-avatars.com/api/?name=Hamza+Shahzad&background=38bdf8&color=fff&size=256" 
+                    src="https://raw.githubusercontent.com/myselfhamzashahzad/profile/refs/heads/main/dp.png" 
                     alt="Hamza Shahzad" 
                     class="rounded-full w-full h-full object-cover border-4 border-white dark:border-slate-700 shadow-xl transition-colors duration-300"
                 >
@@ -148,7 +148,7 @@
             <div class="flex justify-center flex-wrap gap-2 mb-8 px-4">
                 <button onclick="filterSkills('all')" class="skill-filter-btn bg-sky-500 text-white py-2 px-4 rounded-full font-semibold">All</button>
                 <button onclick="filterSkills('technical')" class="skill-filter-btn bg-white dark:bg-slate-700 text-slate-700 dark:text-slate-200 py-2 px-4 rounded-full font-semibold border border-slate-200 dark:border-slate-600 hover:bg-slate-50 dark:hover:bg-slate-600">Technical Expertise</button>
-                <button onclick="filterSkills('scripting')" class="skill-filter-btn bg-white dark:bg-slate-700 text-slate-700 dark:text-slate-200 py-2 px-4 rounded-full font-semibold border border-slate-200 dark:border-slate-600 hover:bg-slate-50 dark:hover:bg-slate-600">AI, Scripting & Automation</button>
+                <button onclick="filterSkills('automation')" class="skill-filter-btn bg-white dark:bg-slate-700 text-slate-700 dark:text-slate-200 py-2 px-4 rounded-full font-semibold border border-slate-200 dark:border-slate-600 hover:bg-slate-50 dark:hover:bg-slate-600">AI, Scripting & Automation</button>
                 <button onclick="filterSkills('virtualization')" class="skill-filter-btn bg-white dark:bg-slate-700 text-slate-700 dark:text-slate-200 py-2 px-4 rounded-full font-semibold border border-slate-200 dark:border-slate-600 hover:bg-slate-50 dark:hover:bg-slate-600">Virtualization & Servers</button>
                 <button onclick="filterSkills('cloud')" class="skill-filter-btn bg-white dark:bg-slate-700 text-slate-700 dark:text-slate-200 py-2 px-4 rounded-full font-semibold border border-slate-200 dark:border-slate-600 hover:bg-slate-50 dark:hover:bg-slate-600">Cloud Platforms</button>
             </div>
@@ -202,7 +202,7 @@
     </main>
 
     <footer class="bg-slate-800 dark:bg-slate-950 text-white text-center py-8 transition-colors duration-300">
-        <p>&copy; 2025 Hamza Shahzad. All Rights Reserved.</p>
+        <p>&copy; 2026 Hamza Shahzad. All Rights Reserved.</p>
         <p class="text-slate-400 mt-2">Built to showcase skills and experience.</p>
     </footer>
 
@@ -222,17 +222,17 @@
             { name: 'CCTV Management', category: 'technical' },
             { name: 'Backup Solutions (Veeam)', category: 'technical' },
             { name: 'IT Monitoring (Nagios, PRTG, Zabbix)', category: 'technical' },
-            { name: 'PowerShell', category: 'scripting' },
-            { name: 'Bash', category: 'scripting' },
-            { name: 'Python', category: 'scripting' },
+            { name: 'PowerShell', category: 'automation' },
+            { name: 'Bash', category: 'automation' },
+            { name: 'Python', category: 'automation' },
             { name: 'VMware & vSphere', category: 'virtualization' },
             { name: 'Hyper-V', category: 'virtualization' },
             { name: 'Proxmox & VirtualBox', category: 'virtualization' },
             { name: 'AWS', category: 'cloud' },
             { name: 'Google Cloud Platform', category: 'cloud' },
             { name: 'Microsoft Azure', category: 'cloud' },
-            { name: 'n8n', category: 'scripting' },
-            { name: 'Olama', category: 'scripting' },
+            { name: 'n8n', category: 'automation' },
+            { name: 'Olama', category: 'automation' },
         ];
 
         const experienceData = [
