--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
     <main class="container mx-auto px-6 py-12">
 
         <section id="hero" class="text-center py-16">
-            <div class="relative w-40 h-40 mx-auto mb-6">
+            <div class="relative w-48 h-48 md:w-64 md:h-64 mx-auto mb-8">
                 <img 
                     src="https://raw.githubusercontent.com/myselfhamzashahzad/profile/refs/heads/main/dp.png" 
                     alt="Hamza Shahzad" 
-                    class="rounded-full w-full h-full object-cover border-4 border-white dark:border-slate-700 shadow-xl transition-colors duration-300"
+                    class="rounded-full w-full h-full object-cover border-4 border-white dark:border-slate-700 shadow-xl transition-all duration-300"
                 >
             </div>
 
